# ssu-dfa-research

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  index.html  main.rs  test_srs
dfaresults/: 2xnswap.dfa  default1dpeg.dfa  default2dpegx3.dfa  defaultsolver.dfa  flip.dfa  flipx3.dfa  fuckedthreerulesolver.dfa  threerule1dpeg.dfa  threerule2dpegx3.dfa  threerulesolver.dfa
example_goals/: collatz_cycle.jff  genuineattempt.jff  intentionalsubset.jff  only0.jff  onlyone1.jff  onlyone1withextra2funk.jff  voidsignored.jff
gui/: Cargo.toml  index.html
gui/assets/: sw.js
gui/src/: main.rs
gui/src/ui/: constructor.rs  error.rs  mod.rs  prep_panel.rs  visualizer.rs
jffresults/: 1dpeg.jff  2dpeg.jff  brokenflip3result.jff  collatz.jff  collatz_attempt.jff  confusion1.jff  confusion2.jff  defaultsolver.jff  experimental3xk.jff  flip.jff  flipx3.jff  fucked1d.jff  fuckedthreerule1d.jff  jfftest.jff  lessbadcollatz.jff  superfinal.jff  threerule1dpeg.jff  threerule2dpegx3.jff  threerulesolver.jff
oldresults/: baddefault1d.dot  badthreerule1d.dot  default1d.dot  flip.dot  threerule1d.dot
pyscripts/: flex.py  flexdata.txt  loaddfa.py  loaddfanope.py  rulewindow.py
src/: batched_sig_sets.rs  bitvec attmept copy.rs  builder.rs  lib.rs  main copy.rs  main fear copy.rs  main minkid diag.rs  main needs.rs  main pre-smoothing.rs  main works.rs  main.rs  test.rs  util.rs
src/solver/: bfs.rs  events.rs  genericsolver.rs  hash.rs  minkid.rs  mod.rs  solver.rs  srssolver.rs  subset.rs
src/ui/: constructor.rs  error.rs  mod.rs  prep_panel.rs  visualizer.rs
src/util/: dfa.rs  mod.rs  ruleset.rs  symset.rs
srs/: collatz
tests/: mod.rs
