[package]
name = "srs_to_dfa"
version = "0.9.0"
edition = "2021"
authors = ["Demi Willison <demiwillison@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
crossbeam = "0.8.4"
petgraph = "0.8.1"
xml-rs = "0.8.4"
serde_json = "1.0"
serde = { version = "1.0.160", features = ["derive"] }
async-trait = "0.1.73"
rayon = "1.8.0"
spmc = "0.3.0"
