[package]
name = "srs_to_dfa_gui"
version = "1.0.0"
edition = "2021"
authors = ["Demi Willison <demiwillison@gmail.com>"]

[dependencies]
egui = {version = "0.22.0"}
rfd = {version = "0.12.0"}
eframe = {version = "0.22.0"}
srs_to_dfa = { version = "0.9", path = "../" }
serde_json = "1.0"
async-std = "1.12.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3.28"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-time = "0.2.0"
web-sys = "0.3.64"
