[package]
name = "srs_to_dfa_gui"
version = "1.0.0"
edition = "2021"
authors = ["Demi Willison <demiwillison@gmail.com>"]

[dependencies]
egui = {version = "0.31.1"}
rfd = {version = "0.15.3"}
eframe = {version = "0.31.1"}
srs_to_dfa = { version = "0.9", path = "../" }
serde_json = "1.0"
async-std = "1.12.0"
egui_plot = "0.32.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-time = "1.1.0"
web-sys = "0.3.64"

[profile.release-with-debug]
inherits = "release"
debug = true